<resources>
    <string name="app_name">allpointments</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_bruh">Hello first bruh</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_message">New User ✎</string>
    <string name="button_send">Submit</string>
    <string name="edit_message1">First Name</string>
    <string name="edit_message2">Middle Name</string>
    <string name="edit_message3">Last Name</string>
    <string name="edit_message4">Gender</string>
    <string name="edit_message5">Title</string>
    <string name="edit_message6">Day</string>
    <string name="edit_message7">Month</string>
    <string name="edit_message8">Year</string>
    <string name="edit_message9">Address 1</string>
    <string name="edit_message10">Address 2</string>
    <string name="edit_message11">City</string>
    <string name="edit_message12">Province/State</string>
    <string name="edit_message13">Country</string>
    <string name="edit_message14">Zip/Post Code</string>
    <string name="edit_message15">Email Address</string>
    <string name="edit_message16">Phone Number</string>
    <string name="edit_message17">SIN #</string>
    <string name="edit_message18">Perferred Day</string>
    <string name="edit_message19">Perferred Time</string>
    <string name="edit_message20">Email Password</string>
</resources>