<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".enterUserInfo">

    <EditText
        android:id="@+id/newuser"
        android:layout_width="216dp"
        android:layout_height="59dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message3"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toEndOf="@+id/middleName"
        app:layout_constraintTop_toBottomOf="@+id/newuser"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message1"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/middleName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newuser"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/PerferredDay"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message18"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/firstName"
        app:layout_constraintEnd_toStartOf="@+id/PerferredTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newuser" />

    <EditText
        android:id="@+id/PerferredTime"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message19"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PerferredDay"
        app:layout_constraintTop_toBottomOf="@+id/newuser" />

    <EditText
        android:id="@+id/Gender"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message4"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/Month"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message7"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Year"
        app:layout_constraintStart_toEndOf="@+id/Day"
        app:layout_constraintTop_toBottomOf="@+id/Gender"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/Year"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message8"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Month"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/Day"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message6"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gender"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/City"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message11"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/StateProvince"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Address1"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/SIN"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message17"
        android:inputType="textPersonName"
        android:textSize="13sp"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="616dp" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message16"
        android:inputType="textPersonName"
        android:textSize="11.5sp"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="557dp" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message15"
        android:inputType="textPersonName"
        android:textSize="12.5sp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="616dp" />

    <EditText
        android:id="@+id/emailpassword"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message20"
        android:inputType="textPersonName"
        android:textSize="11.5sp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="616dp" />

    <EditText
        android:id="@+id/ZipPostCode"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message14"
        android:inputType="textPersonName"
        android:textSize="12.5sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="557dp" />

    <EditText
        android:id="@+id/StateProvince"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message12"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Country"
        app:layout_constraintStart_toEndOf="@+id/City"
        app:layout_constraintTop_toBottomOf="@+id/Address1"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/Country"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message13"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/StateProvince"
        app:layout_constraintTop_toBottomOf="@+id/Address2"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/Address1"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message9"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Address2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Day"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/Address2"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message10"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Address1"
        app:layout_constraintTop_toBottomOf="@+id/Year"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/Title"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message5"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Gender"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/middleName"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_message2"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/newuser"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        app:backgroundTint="#F44336"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="667dp" />

</androidx.constraintlayout.widget.ConstraintLayout>